// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Pages : State : State links renders correctly 1`] = `
<ul
  className="list-unstyled listUnstyled"
>
  <li>
    <a
      href="https://twitter.com/california-covid"
    >
      Official Twitter
    </a>
    <span>
      •
    </span>
  </li>
  <li>
    <a
      href="https://example.com"
    >
      Data Source
    </a>
  </li>
</ul>
`;

exports[`Components : Pages : State : State links renders correctly 2`] = `
<ul
  className="list-unstyled listUnstyled"
>
  <li>
    <a
      href="https://twitter.com/california-covid"
    >
      Official Twitter
    </a>
    <span>
      •
    </span>
  </li>
  <li>
    <a
      href="https://example.com"
    >
      Best Current Data Source
    </a>
    <span>
      •
    </span>
  </li>
  <li>
    <a
      href="https://example.com"
    >
      Data Source
    </a>
  </li>
</ul>
`;
